# threads-analytics

./: .env.example  .gitignore  README.md  STYLE_GUIDE.md  pyproject.toml
scripts/: setup_token.py
src/threads_analytics/: __init__.py  affinity.py  algorithm_inference.py  analyzer.py  backfill.py  cli.py  config.py  db.py  experiments.py  ingest.py  learning.py  metrics.py  models.py  noteworthy.py  perception.py  pipeline.py  predicates.py  recommender.py  suggestions.py  threads_client.py  topics.py  verdict.py  you.py
src/threads_analytics/web/: app.py  routes.py
src/threads_analytics/web/static/: animate.js  style.css
src/threads_analytics/web/templates/: _experiment_card.html  affinity.html  algorithm.html  base.html  experiment_detail.html  experiment_new.html  experiments.html  ground_truth.html  index.html  learning.html  perception.html  posts.html  recommendations.html  topics.html  you.html
tests/: test_affinity_scoring.py  test_analyzer.py  test_full_pipeline_with_mock_threads.py  test_predicates.py  test_verdict.py  test_web_routes.py
